# Assignment3_oop

./: README.md
A3_SheetPb01_20220025/: A3_SheetPb01_20220025.cpp  CMakeLists.txt  labels.txt
A3_SheetPb03_20220265/: A3_SheetPb03_20220265.cpp  CMakeLists.txt
A3_SheetPb03_2022065/: A3_SheetPb03_20220265.cpp  CMakeLists.txt  test1.txt
A3_SheetPb04_20220025/: CMakeLists.txt  main.cpp
A3_SheetPb06_20220265/: A3_SheetPb06_20220265.cpp  CMakeLists.txt
A3_SheetPb2_20220131/: A3_SheetPb2_20220131.cpp  CMakeLists.txt  document.txt
A3_SheetPb5_20220131/: A3_SheetPb5_20220131.cpp  CMakeLists.txt  processes
Four-in-a-row/: BoardGame_Classes.h  CMakeLists.txt  Player.cpp  RandomPlayer.cpp  main.cpp
GAMES/: A5x5_Board.cpp  BoardGame_Classes.h  CMakeLists.txt  Four-in-a-row_Board.cpp  RandomPlayer.cpp  main.cpp
Pyramic Tic-Tac-Toe(V3)/: BoardGame_Classes.cpp  BoardGame_Classes.h  CMakeLists.txt  GameManager.cpp  Player.cpp  PyramidcX_O.cpp  RandomPlayer.cpp  X_O_Board.cpp  main.cpp
Task#3/: A5x5_Board.cpp  BoardGame_Classes.h  CMakeLists.txt  Four-in-a-row_Board.cpp  GameManager.cpp  Player.cpp  Pyramic.cpp  RandomPlayer.cpp  X_O_App.cpp
X_O 5x5/: BoardGame_Classes.hpp  CMakeLists.txt  GameManager.cpp  X_O_App.cpp  X_O_Board.cpp
