cmake_minimum_required(VERSION 3.24)
project(untitled1)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled1 main.cpp
        RandomPlayer.cpp
        GameManager.cpp
        Player.cpp
        Four-in-a-row_Board.cpp
        Four-in-a-row_Board.cpp
        A5x5_Board.cpp
        Pyramic.cpp
        X_O_Board.cpp)
