cmake_minimum_required(VERSION 3.24)
project(Pyramic_Tic_Tac_Toe_V3_)

set(CMAKE_CXX_STANDARD 23)

add_executable(Pyramic_Tic_Tac_Toe_V3_ main.cpp PyramidcX_O.cpp BoardGame_Classes.cpp BoardGame_Classes.h GameManager.cpp Player.cpp RandomPlayer.cpp "GUI.cpp" "D:/Documents/LvL 2/Semester 1/OOP/Assignments/Assignment 3/CS213-2023-2024-Assignment3-V1.0/XO_OOP_wRandom/include/BoardGame_Classes.hpp")
